<resources>
    <string name="cancel">Cancel</string>
    <string name="copy">Copy</string>
    <string name="copyUrl">Copy URL</string>
    <string name="cut">Cut</string>
    <string name="defaultVoiceMailAlphaTag">Voicemail</string>
    <string name="defaultMsisdnAlphaTag">MSISDN1</string>
    <string name="emptyPhoneNumber">(No phone number)</string>
    <string name="httpErrorBadUrl">The page could not be opened because the URL is invalid.</string>
    <string name="httpErrorUnsupportedScheme">The protocol is not supported.</string>
    <string name="no">Cancel</string>
    <string name="ok">OK</string>
    <string name="paste">Paste</string>
    <string name="search_go">Search</string>
    <string name="selectAll">Select all</string>
    <string name="unknownName">(Unknown)</string>
    <string name="untitled">&lt;untitled></string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="yes">OK</string>
    <string name="dialog_alert_title">Attention</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="selectTextMode">Select text...</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="config_ethernet_iface_regex">eth\\d</string>
    <string name="config_tether_apndata" />
    <string name="config_wifi_p2p_device_type">10-0050F204-5</string>
    <string name="default_wallpaper_component">@null</string>
    <string name="config_networkLocationProvider">com.google.android.location.NetworkLocationProvider</string>
    <string name="config_geocodeProvider">com.google.android.location.GeocodeProvider</string>
    <string name="config_defaultThemeComponent">com.sonyericsson.defaultruntimethemes/com.sonyericsson.defaultruntimethemes.BlueThemeService</string>
    <string name="config_default_ime">com.sonyericsson.textinput.uxp/.glue.InputMethodServiceGlue</string>
    <string name="config_datause_iface">rmnet0</string>
    <string name="config_default_dns_server">8.8.8.8</string>
    <string name="gsm_alphabet_default_charset" />
    <string name="config_useragentprofile_url">http://wap.sonyericsson.com/UAprof/%sR411.xml</string>
    <string name="config_isoImagePath">/system/etc/dop.iso</string>
    <string name="config_ntpServer">pool.ntp.org</string>
    <string name="config_wimaxServiceJarLocation" />
    <string name="config_wimaxNativeLibLocation" />
    <string name="config_wimaxManagerClassname" />
    <string name="config_wimaxServiceClassname" />
    <string name="config_wimaxStateTrackerClassname" />
    <string name="month_long_standalone_january">January</string>
    <string name="month_long_standalone_february">February</string>
    <string name="month_long_standalone_march">March</string>
    <string name="month_long_standalone_april">April</string>
    <string name="month_long_standalone_may">May</string>
    <string name="month_long_standalone_june">June</string>
    <string name="month_long_standalone_july">July</string>
    <string name="month_long_standalone_august">August</string>
    <string name="month_long_standalone_september">September</string>
    <string name="month_long_standalone_october">October</string>
    <string name="month_long_standalone_november">November</string>
    <string name="month_long_standalone_december">December</string>
    <string name="month_long_january">January</string>
    <string name="month_long_february">February</string>
    <string name="month_long_march">March</string>
    <string name="month_long_april">April</string>
    <string name="month_long_may">May</string>
    <string name="month_long_june">June</string>
    <string name="month_long_july">July</string>
    <string name="month_long_august">August</string>
    <string name="month_long_september">September</string>
    <string name="month_long_october">October</string>
    <string name="month_long_november">November</string>
    <string name="month_long_december">December</string>
    <string name="month_medium_january">Jan</string>
    <string name="month_medium_february">Feb</string>
    <string name="month_medium_march">Mar</string>
    <string name="month_medium_april">Apr</string>
    <string name="month_medium_may">May</string>
    <string name="month_medium_june">Jun</string>
    <string name="month_medium_july">Jul</string>
    <string name="month_medium_august">Aug</string>
    <string name="month_medium_september">Sep</string>
    <string name="month_medium_october">Oct</string>
    <string name="month_medium_november">Nov</string>
    <string name="month_medium_december">Dec</string>
    <string name="month_shortest_january">J</string>
    <string name="month_shortest_february">F</string>
    <string name="month_shortest_march">M</string>
    <string name="month_shortest_april">A</string>
    <string name="month_shortest_may">M</string>
    <string name="month_shortest_june">J</string>
    <string name="month_shortest_july">J</string>
    <string name="month_shortest_august">A</string>
    <string name="month_shortest_september">S</string>
    <string name="month_shortest_october">O</string>
    <string name="month_shortest_november">N</string>
    <string name="month_shortest_december">D</string>
    <string name="day_of_week_long_sunday">Sunday</string>
    <string name="day_of_week_long_monday">Monday</string>
    <string name="day_of_week_long_tuesday">Tuesday</string>
    <string name="day_of_week_long_wednesday">Wednesday</string>
    <string name="day_of_week_long_thursday">Thursday</string>
    <string name="day_of_week_long_friday">Friday</string>
    <string name="day_of_week_long_saturday">Saturday</string>
    <string name="day_of_week_medium_sunday">Sun</string>
    <string name="day_of_week_medium_monday">Mon</string>
    <string name="day_of_week_medium_tuesday">Tue</string>
    <string name="day_of_week_medium_wednesday">Wed</string>
    <string name="day_of_week_medium_thursday">Thu</string>
    <string name="day_of_week_medium_friday">Fri</string>
    <string name="day_of_week_medium_saturday">Sat</string>
    <string name="day_of_week_short_sunday">Su</string>
    <string name="day_of_week_short_monday">Mo</string>
    <string name="day_of_week_short_tuesday">Tu</string>
    <string name="day_of_week_short_wednesday">We</string>
    <string name="day_of_week_short_thursday">Th</string>
    <string name="day_of_week_short_friday">Fr</string>
    <string name="day_of_week_short_saturday">Sa</string>
    <string name="day_of_week_shortest_sunday">S</string>
    <string name="day_of_week_shortest_monday">M</string>
    <string name="day_of_week_shortest_tuesday">T</string>
    <string name="day_of_week_shortest_wednesday">W</string>
    <string name="day_of_week_shortest_thursday">T</string>
    <string name="day_of_week_shortest_friday">F</string>
    <string name="day_of_week_shortest_saturday">S</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="hour_minute_24" formatted="false">%H:%M</string>
    <string name="hour_minute_ampm" formatted="false">%-l:%M%p</string>
    <string name="hour_minute_cap_ampm" formatted="false">%-l:%M%^p</string>
    <string name="twelve_hour_time_format">h:mm a</string>
    <string name="twenty_four_hour_time_format">HH:mm</string>
    <string name="numeric_date" formatted="false">%-m/%-e/%Y</string>
    <string name="numeric_date_format">M/d/yyyy</string>
    <string name="numeric_date_template" formatted="false">%s/%s/%s</string>
    <string name="month_day_year" formatted="false">%B %-e, %Y</string>
    <string name="time_of_day" formatted="false">%-l:%M:%S %p</string>
    <string name="date_and_time" formatted="false">%b %-e, %Y, %-l:%M:%S %p</string>
    <string name="date_time">%1$s, %2$s</string>
    <string name="time_date">%1$s, %3$s</string>
    <string name="abbrev_month_day_year" formatted="false">%b %-e, %Y</string>
    <string name="month_day" formatted="false">%B %-e</string>
    <string name="month">%-B</string>
    <string name="month_year" formatted="false">%B %Y</string>
    <string name="abbrev_month_day" formatted="false">%b %-e</string>
    <string name="abbrev_month">%-b</string>
    <string name="abbrev_month_year" formatted="false">%b %Y</string>
    <string name="time1_time2">%1$s – %2$s</string>
    <string name="date1_date2">%2$s – %5$s</string>
    <string name="numeric_md1_md2">%2$s/%3$s – %7$s/%8$s</string>
    <string name="numeric_wday1_md1_wday2_md2">%1$s, %2$s/%3$s – %6$s, %7$s/%8$s</string>
    <string name="numeric_mdy1_mdy2">%2$s/%3$s/%4$s – %7$s/%8$s/%9$s</string>
    <string name="numeric_wday1_mdy1_wday2_mdy2">%1$s, %2$s/%3$s/%4$s – %6$s, %7$s/%8$s/%9$s</string>
    <string name="numeric_wday1_mdy1_time1_wday2_mdy2_time2">%1$s, %2$s/%3$s/%4$s, %5$s – %6$s, %7$s/%8$s/%9$s, %10$s</string>
    <string name="numeric_md1_time1_md2_time2">%2$s/%3$s, %5$s – %7$s/%8$s, %10$s</string>
    <string name="numeric_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s/%3$s, %5$s – %6$s, %7$s/%8$s, %10$s</string>
    <string name="numeric_mdy1_time1_mdy2_time2">%2$s/%3$s/%4$s, %5$s – %7$s/%8$s/%9$s, %10$s</string>
    <string name="wday1_date1_time1_wday2_date2_time2">%1$s, %2$s, %3$s – %4$s, %5$s, %6$s</string>
    <string name="wday1_date1_wday2_date2">%1$s, %2$s – %4$s, %5$s</string>
    <string name="date1_time1_date2_time2">%2$s, %3$s – %5$s, %6$s</string>
    <string name="time_wday_date">%1$s, %2$s, %3$s</string>
    <string name="wday_date">%2$s, %3$s</string>
    <string name="time_wday">%1$s, %2$s</string>
    <string name="same_year_md1_md2">%2$s %3$s – %7$s %8$s</string>
    <string name="same_year_wday1_md1_wday2_md2">%1$s, %2$s %3$s – %6$s, %7$s %8$s</string>
    <string name="same_year_md1_time1_md2_time2">%2$s %3$s, %5$s – %7$s %8$s, %10$s</string>
    <string name="same_month_md1_time1_md2_time2">%2$s %3$s, %5$s – %7$s %8$s, %10$s</string>
    <string name="same_year_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s %3$s, %5$s – %6$s, %7$s %8$s, %10$s</string>
    <string name="same_month_wday1_md1_time1_wday2_md2_time2">%1$s, %2$s %3$s, %5$s – %6$s, %7$s %8$s, %10$s</string>
    <string name="same_year_mdy1_time1_mdy2_time2">%2$s %3$s, %4$s, %5$s – %7$s %8$s, %9$s, %10$s</string>
    <string name="lockscreen_strings_backup_selection_header_txt">Unlock screen</string>
    <string name="lockscreen_strings_backup_selection_next_txt">Next</string>
    <string name="lockscreen_strings_backup_question_header_txt">Security question</string>
    <string name="lockscreen_strings_backup_question_unlock_button_txt">Unlock</string>
    <string name="lockscreen_strings_backup_question_emergency_button_txt">Emergency call</string>
    <string name="lockscreen_strings_backup_question_answer_hint_txt">Answer</string>
    <string name="keyguard_password_enter_pin_code">Enter PIN code</string>
    <string name="keyguard_password_enter_puk_prompt">PUK code</string>
    <string name="keyguard_password_enter_pin_prompt">New Pin Code</string>
    <string name="lockscreen_emergency_call">Emergency call</string>
    <string name="lockscreen_transport_prev_description">Previous track button</string>
    <string name="lockscreen_transport_next_description">Next track button</string>
    <string name="lockscreen_transport_play_description">Play button</string>
    <string name="lockscreen_glogin_forgot_pattern">Account unlock</string>
    <string name="lockscreen_glogin_instructions">To unlock, sign in with your Google account</string>
    <string name="lockscreen_glogin_username_hint">Username (email)</string>
    <string name="lockscreen_glogin_password_hint">Password</string>
</resources>