<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#70000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0" android:layout_above="@id/footerUnlockButton">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:textAppearance="?textAppearanceSmall" android:gravity="center_vertical" android:id="@id/headerText" android:background="@drawable/semc_title_bar" android:paddingLeft="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/lockscreen_strings_backup_question_header_txt" android:layout_alignParentTop="true" />
            <TextView android:textSize="19.0dip" android:textColor="#ffffffff" android:id="@id/questionText" android:padding="17.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/headerText" />
            <EditText android:textSize="19.0dip" android:id="@id/answerText" android:paddingLeft="5.0dip" android:paddingTop="10.0dip" android:paddingRight="5.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0px" android:layout_marginTop="8.0px" android:layout_marginRight="5.0px" android:layout_marginBottom="8.0px" android:hint="@string/lockscreen_strings_backup_question_answer_hint_txt" android:layout_below="@id/questionText" android:inputType="text" android:imeOptions="actionDone" />
        </RelativeLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:id="@id/footerButtonBar" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:ellipsize="marquee" android:id="@id/emergencyCallButton" android:layout_width="150.0dip" android:layout_height="wrap_content" android:text="@string/lockscreen_strings_backup_question_emergency_button_txt" android:singleLine="true" android:drawableLeft="@drawable/ic_emergency" style="@style/SEMCWidget.Button" />
        <View android:visibility="invisible" android:layout_width="1.0dip" android:layout_height="0.0dip" android:layout_weight="1.0" />
        <Button android:ellipsize="marquee" android:id="@id/footerUnlockButton" android:layout_width="150.0dip" android:layout_height="wrap_content" android:text="@string/lockscreen_strings_backup_question_unlock_button_txt" android:singleLine="true" style="@style/SEMCWidget.Button" />
    </LinearLayout>
</LinearLayout>
